# next

./: CMakeLists.txt  README.md  build.bat  build.sh
doc/html/: docutils.css  libraries.htm
doc/html/event/: index.html
doc/html/event/next_event/: todo.html  tutorial.html
doc/html/get_typename/: index.html
doc/html/get_typename/next_gettypename/: todo.html  tutorial.html
doc/html/images/: Thumbs.db
doc/html/images/callouts/: Thumbs.db
doc/src/: CMakeLists.txt  boost.xml
libs/: CMakeLists.txt
libs/event/: CMakeLists.txt  module.cmake
libs/event/doc/: CMakeLists.txt  event.qbk  tutorial.qbk
libs/event/src/: CMakeLists.txt  dispatcher.cpp  event_handler.cpp  message_handling_thread.cpp
libs/event/test/: CMakeLists.txt  basic_send_message.cpp
libs/event/test/test_event/: test_event.sln
libs/event/test/test_event/test_event/: ReadMe.txt  test_event.vcxproj  test_event.vcxproj.filters
libs/get_typename/: CMakeLists.txt
libs/get_typename/doc/: CMakeLists.txt  get_typename.qbk  todo.qbk  tutorial.qbk
libs/get_typename/example/: todo.cpp  tutorial.cpp
libs/get_typename/src/: CMakeLists.txt  get_typename.cpp
libs/get_typename/test/: CMakeLists.txt  basic_typename.cpp
libs/property/: CMakeLists.txt  module.cmake
libs/property/doc/: CMakeLists.txt  todo.qbk
libs/property/example/: todo.cpp  tutorial.cpp
libs/property/src/: CMakeLists.txt  abstract_property.cpp  abstract_property_backend.cpp  property.cpp
libs/property/test/: CMakeLists.txt  basic_property.cpp
libs/widget/: CMakeLists.txt  module.cmake
libs/widget/doc/: CMakeLists.txt  tutorial.qbk
libs/widget/src/: CMakeLists.txt  dispatcher.cpp  widget.cpp
libs/widget/test/: CMakeLists.txt  basic_widget.cpp
next/: version.hpp
next/cpp/: make_unique.hpp
next/event/: abstract_event_data.hpp  aggregator.hpp  config.hpp  dispatcher.hpp  dispatcher.hxx  event.hpp  event_data.hpp  event_handler.hpp  event_handler.hxx  message_handling_client.hpp  message_handling_thread.hpp  message_handling_thread.hxx  thread_group.hpp
next/get_typename/: config.hpp  get_typename.hpp
next/property/: abstract_property.hpp  abstract_property.hxx  abstract_property_backend.hpp  abstract_property_backend.hxx  property.hpp  property.hxx  property_backend.hpp  property_backend.hxx  property_manager.hpp  property_manager.hxx
next/widget/: dispatcher.hpp  widget.hpp
